--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       - dokploy-network
   node-odm:
     image: opendronemap/nodeodm
+    container_name: node-odm
     expose:
       - "3000"
     restart: unless-stopped
