--- a/docker-compose.dokploynodes.yml
+++ b/docker-compose.dokploynodes.yml
@@ -6,8 +6,8 @@ services:
   node-odm-1:
     image: opendronemap/nodeodm
     container_name: webodm-node-odm-1
-    expose:
-      - "3000"
+    ports:
+      - "3000:3201"
     restart: unless-stopped
     oom_score_adj: 500
     networks:
@@ -15,8 +15,8 @@ services:
   node-odm-2:
     image: opendronemap/nodeodm
     container_name: webodm-node-odm-2
-    expose:
-      - "3000"
+    ports:
+      - "3000:3203"
     restart: unless-stopped
     oom_score_adj: 500
     networks:
@@ -24,8 +24,8 @@ services:
   node-odm-3:
     image: opendronemap/nodeodm
     container_name: webodm-node-odm-3
-    expose:
-      - "3000"
+    ports:
+      - "3000:3203"
     restart: unless-stopped
     oom_score_adj: 500
     networks:
