test with new workflow

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,11 +2,13 @@
 name: WebODM Custom Webapp
 
 on:
-  push:
-    branches:
-      - master  # Passe den Branch nach Bedarf an
+    release:
+      types: [published]
+    push:
+      tags:
+        - "*"
  
- 
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
