change github actions

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -9,9 +9,13 @@ env:
 on:
   release:
     types: [published]
+    branches:
+      - main
   push:
     tags:
       - "*"
+    branches:
+      - main
  
 
 jobs:
