--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -46,6 +46,8 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+            type=semver,pattern={{version}}
+            
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
